...
    <string name="dismiss">Dismiss</string>
    <string name="an_error_has_occurred">"An error has occurred: "</string>
    <string name="couldn_t_find_any_lyrics_for">Couldn\'t find any lyrics for \'%1$s\'</string>
    <string name="try_again">Try again</string>
    <string name="this_email_is_already_in_use">This email is already in use</string>
    <string name="username_cannot_contain_special_characters">username cannot contain special characters</string>
    <string name="this_email_address_has_not_yet_been_registered">This email address has not yet been registered</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="search">Search</string>
    <string name="could_not_connect_to_the_server">Could not connect to the server</string>
    <string name="lesson_results">Lesson Results</string>
    <string name="statistics">Statistics</string>
    <string name="words_learned">Words learned</string>
    <string name="accuracy">Accuracy</string>
...
