...
import cc.wordview.app.ui.theme.DefaultRoundedCornerShape
import cc.wordview.app.ui.theme.Typography
import cc.wordview.app.ui.theme.poppinsFamily

@Composable
fun AuthForm(title: String, modifier: Modifier = Modifier, fieldBlock: @Composable (ColumnScope.() -> Unit)) {
    InstantAnimatedVisibility(modifier = modifier.testTag("auth-form")) {
        Surface(
            color = MaterialTheme.colorScheme.surfaceContainer,
            shape = DefaultRoundedCornerShape
        ) {
            Column(
                modifier = Modifier.padding(24.dp),
...
