...
                setStoredJwt(it, appContext)
                onRegisterCompleted.invoke()
            }
            onFail = { s: String, i: Int ->
                Timber.e("Register failed \n\t message=$s, status=$i")

                if (s.contains("This email is already in use")) {
                    emitMessage(appContext.getString(R.string.this_email_is_already_in_use))
                } else if (s.contains("username cannot contain special characters")) {
                    emitMessage(appContext.getString(R.string.username_cannot_contain_special_characters))
                } else {
                    emitMessage(appContext.getString(R.string.could_not_connect_to_the_server))
                }
...
